@@ -29,6 +29,10 @@ void lftp_readline_init (void);
 int  lftp_history_expand (const char *, char **);
 char *lftp_readline (const char *prompt);
 void lftp_add_history_nodups(const char *cmd);
+void lftp_history_clear();
+void lftp_history_list(int cnt);
+int lftp_history_write(const char *fn);
+int lftp_history_read(const char *fn);
 void lftp_rl_clear(void);
 void lftp_rl_redisplay_maybe(void);
 void lftp_rl_set_ignore_some_completions_function(int (*func)(char**));
